# stock-plots

./: Makefile.am  README.md  builder.ui  configure.ac  style.css
include/: cmdline.h  config.h  curl.h  daemon.h  datalogger.h  parse_json.h  plotter.h  widget_create.h  widget_functions.h
src/: cmdline.c  config.c  curl.c  daemon.c  datalogger.c  main.c  parse_json.c  plotter.c  widget_create.c  widget_functions.c
